@@ -2,7 +2,6 @@
 + Screenshots (a la gsnapshot) (gtk.gdk.Pixbuf.get_from_drawable)
 + code cleanup... (preload_*, animtest stuff, rename funcs)
 + remote images - load in separate thread to prevent blocking...
-+ bug 11263
 
 1.0
 + Allow zooming in crop dialog (default to same view as main window so that
